# agent-skills

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: 01-getting-started.md  02-install.md  03-choosing-packs.md  04-authoring-skills.md  05-skillctl-reference.md  06-contributing.md  07-introducing-agent-skills.md  README.md
docs/architecture/: 01-brd.md  02-high-level-architecture.md  README.md
evals/prompts/: react-state-management.md
registry/: README.md  skill-backlog.yaml  taxonomy.yaml  waves.yaml
registry/collections/: angular.yaml  architecture.yaml  backend.yaml  code-quality.yaml  dotnet.yaml  frontend.yaml  java.yaml  kotlin.yaml  migrations.yaml  php.yaml  react.yaml  rust.yaml  technical-writing.yaml  testing.yaml  vue.yaml
registry/packs/: ai-engineering-pack.yaml  architecture-review-pack.yaml  dotnet-backend-pack.yaml  frontend-angular-pack.yaml  frontend-react-pack.yaml  frontend-ux-ui-pack.yaml  frontend-vue-pack.yaml  java-backend-pack.yaml  kotlin-backend-pack.yaml  php-backend-pack.yaml  production-readiness-pack.yaml  (+5 more)
schemas/: backlog.schema.yaml  collection.schema.yaml  pack.schema.yaml  skill.schema.yaml
scripts/: install-from-clone.sh  install-git-hooks.sh  pre-commit  reorganize-registry-by-technology.py
tests/: skillctl_runner.py  test_backlog_gen.py  test_cli.py  test_install.py  test_modes.py  test_parse.py  test_recommend.py  test_render.py  test_routing.py  test_validate.py
tools/: skillctl  skillctl.cmd  skillctl.ps1
(+265 files in other folders)
