[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-skills"
version = "0.1.0"
description = "Cross-agent engineering skill library tooling"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
skillctl = "skillforge.cli:main"

[tool.setuptools]
package-dir = {"" = "tools"}

[tool.setuptools.packages.find]
where = ["tools"]

